# llm-prep-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  LICENSE  QUICK-REFERENCE.md  README.md  WORKSHOP.md  implementation_summary.md  instructions_i_see.md  makefile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-publish.yml  release.yml  test.yml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
prompts/: context_prep_prompts.json
scripts/: generate_claude_config.py  generate_install_cmd.py  install.ps1  install.sh  quickstart.bat  quickstart.ps1  test_server.py
src/: config.py  llm_prep.py  mcp_server_fastmcp.py
tests/: __init__.py  test_server.py
