[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-prep-mcp"
version = "1.0.0"
description = "MCP server for preparing comprehensive codebase context documents for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Julius Olsson" }
]
keywords = [
    "mcp",
    "llm",
    "context",
    "claude",
    "ai",
    "model-context-protocol",
    "codebase",
    "documentation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "pydantic>=2.7.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/Juliusolsson05/llm-prep-mcp"
Repository = "https://github.com/Juliusolsson05/llm-prep-mcp"
Issues = "https://github.com/Juliusolsson05/llm-prep-mcp/issues"
Documentation = "https://github.com/Juliusolsson05/llm-prep-mcp#readme"

[project.scripts]
llm-prep-mcp = "src.mcp_server_fastmcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/prompts",
    "/requirements.txt",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config", "llm_prep", "mcp_server_fastmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "scripts"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
